@@ -3,13 +3,13 @@ package ts.andrey.devicecollector.configuration;
 import com.zaxxer.hikari.HikariDataSource;
 import lombok.RequiredArgsConstructor;
 import org.apache.shardingsphere.driver.api.ShardingSphereDataSourceFactory;
-import org.apache.shardingsphere.driver.yaml.YamlJDBCConfiguration;
 import org.apache.shardingsphere.infra.algorithm.core.config.AlgorithmConfiguration;
 import org.apache.shardingsphere.readwritesplitting.config.ReadwriteSplittingRuleConfiguration;
 import org.apache.shardingsphere.readwritesplitting.config.rule.ReadwriteSplittingDataSourceGroupRuleConfiguration;
 import org.apache.shardingsphere.sharding.api.config.ShardingRuleConfiguration;
 import org.apache.shardingsphere.sharding.api.config.rule.ShardingTableRuleConfiguration;
 import org.apache.shardingsphere.sharding.api.config.strategy.sharding.StandardShardingStrategyConfiguration;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Primary;
@@ -23,93 +23,107 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.List;
 import java.util.Map;
 import java.util.Properties;
+import java.util.stream.IntStream;
 
 @Configuration
 @RequiredArgsConstructor
 public class ShardingSphereConfig {
 
+    private static final String MASTER_PROPERTY_NAME = "dataSources";
+
+    private static final String REPLICA_PROPERTY_NAME = "replicaDataSources";
+
+    private static final String ALGORITHM_NAME = "deviceid_inline";
+
+    private static final String SHARD_NAME = "shard";
+
+    private static final String REPLICA_POSTFIX = "_replica";
+
+    private static final String POSTGRES_DRIVER = "org.postgresql.Driver";
+
+    private static final String LOAD_BALANCERS_TYPE = "round_robin";
+
+    @Value("${app.shardingSphere.logicTable}")
+    private String logicTable;
+
+    @Value("${app.shardingSphere.shardingColumn}")
+    private String shardingColumn;
+
+    @Value("${app.shardingSphere.algorithmExpression}")
+    private String algorithmExpression;
+
+    @Value("${app.shardingSphere.shardCount}")
+    private Integer shardCount;
+
     @Primary
     @Bean
     public DataSource createShardingDataSource() {
-        final var deviceTableRule = new ShardingTableRuleConfiguration("t_device", "shard${0..1}.t_device");
+        final var chardMax = shardCount - 1;
+        final var deviceTableRule = new ShardingTableRuleConfiguration(logicTable, SHARD_NAME + "${0.." + chardMax + "}." + logicTable);
         deviceTableRule.setDatabaseShardingStrategy(
-                new StandardShardingStrategyConfiguration("device_id", "deviceid_inline")
+                new StandardShardingStrategyConfiguration(shardingColumn, ALGORITHM_NAME)
         );
 
         final var shardingRule = new ShardingRuleConfiguration();
         shardingRule.getTables().add(deviceTableRule);
         final var props = new Properties();
-        props.put("algorithm-expression", "shard$->{Math.abs(device_id.hashCode()) % 2}");
-        shardingRule.getShardingAlgorithms().put(
-                "deviceid_inline",
-                new AlgorithmConfiguration("INLINE", props)
-        );
+        props.put("algorithm-expression", String.format(algorithmExpression, shardCount));
+        shardingRule.getShardingAlgorithms().put(ALGORITHM_NAME, new AlgorithmConfiguration("INLINE", props));
 
-        final var masterSource = ShardUtil.loadShardProperties("dataSources");
-        final var replicaSource = ShardUtil.loadShardProperties("replicaDataSources");
-
-        final var dataSourceMap = new HashMap<String, DataSource>();
-
-        for (int i = 0; i < masterSource.size(); i++) {
-            final var source = masterSource.get(i);
-            final var ds = new HikariDataSource();
-            ds.setJdbcUrl(source.getUrl());
-            ds.setUsername(source.getUsername());
-            ds.setPassword(source.getPassword());
-            ds.setDriverClassName("org.postgresql.Driver");
-            dataSourceMap.put("shard" + i, ds);
-        }
-
-        for (int i = 0; i < replicaSource.size(); i++) {
-            final var source = masterSource.get(i);
-            final var ds = new HikariDataSource();
-            ds.setJdbcUrl(source.getUrl());
-            ds.setUsername(source.getUsername());
-            ds.setPassword(source.getPassword());
-            ds.setDriverClassName("org.postgresql.Driver");
-            dataSourceMap.put("shard" + i + "_replica", ds);
-        }
-
-        // --- READWRITE SPLITTING ---
-        YamlJDBCConfiguration conf = new YamlJDBCConfiguration();
-        conf.setDatabaseName("iot_platform");
-
-        ReadwriteSplittingDataSourceGroupRuleConfiguration shard0Group =
-                new ReadwriteSplittingDataSourceGroupRuleConfiguration(
-                        "shard0",
-                        "shard0",
-                        Collections.singletonList("shard0_replica"),
-                        "round_robin"
-                );
-
-        ReadwriteSplittingDataSourceGroupRuleConfiguration shard1Group =
-                new ReadwriteSplittingDataSourceGroupRuleConfiguration(
-                        "shard1",
-                        "shard1",
-                        List.of("shard1_replica"),
-                        "round_robin"
-                );
-
-
-        final var loadBalancers = Map.<String, AlgorithmConfiguration>of(
-                "round_robin", new AlgorithmConfiguration("ROUND_ROBIN", new Properties())
-        );
-
+        final var masterSource = ShardUtil.loadShardProperties(MASTER_PROPERTY_NAME);
         masterSource.forEach(LiquibaseProcessor::runLiquibase);
 
-        final var readwriteRule = new ReadwriteSplittingRuleConfiguration(List.of(shard0Group, shard1Group), loadBalancers);
+        final var dataSourceGroups = IntStream.range(0, chardMax)
+                .mapToObj(i -> {
+                    final var name = SHARD_NAME + i;
+                    final var replicaName = name + REPLICA_POSTFIX;
+                    return new ReadwriteSplittingDataSourceGroupRuleConfiguration(
+                            name, name, Collections.singletonList(replicaName),
+                            LOAD_BALANCERS_TYPE
+                    );
+                }).toList();
+
+
+        final var loadBalancers = Map.of(
+                LOAD_BALANCERS_TYPE, new AlgorithmConfiguration(LOAD_BALANCERS_TYPE.toUpperCase(), new Properties())
+        );
+
+        final var readwriteRule = new ReadwriteSplittingRuleConfiguration(dataSourceGroups, loadBalancers);
+
+        final var dataSourceMap = getAllDataSources();
 
         try {
             return ShardingSphereDataSourceFactory.createDataSource(
                     dataSourceMap,
-                    new HashSet<>(Arrays.asList(shardingRule, readwriteRule)), // <--- тут оба
+                    new HashSet<>(Arrays.asList(shardingRule, readwriteRule)),
                     new Properties()
             );
         } catch (SQLException e) {
             throw new DeviceCollectorException(e);
+        }
+    }
+
+    private Map<String, DataSource> getAllDataSources() {
+        final var map = new HashMap<String, DataSource>();
+        putDataSources(map, true);
+        putDataSources(map, false);
+        return map;
+    }
+
+    private void putDataSources(HashMap<String, DataSource> dataSourceMap, boolean isReplica) {
+        final var propName = isReplica ? REPLICA_PROPERTY_NAME : MASTER_PROPERTY_NAME;
+        final var sourceList = ShardUtil.loadShardProperties(propName);
+        for (int i = 0; i < sourceList.size(); i++) {
+            final var name = isReplica ? SHARD_NAME + i + REPLICA_POSTFIX : SHARD_NAME + i;
+            final var source = sourceList.get(i);
+            final var ds = new HikariDataSource();
+            ds.setJdbcUrl(source.getUrl());
+            ds.setUsername(source.getUsername());
+            ds.setPassword(source.getPassword());
+            ds.setDriverClassName(POSTGRES_DRIVER);
+            dataSourceMap.put(name, ds);
         }
     }
 
